CSS tweaks to hide Reply To textarea scrollbars when collapsed. Issue: #2657

--- a/static/css/inbox.less
+++ b/static/css/inbox.less
@@ -447,8 +447,9 @@ body {
     textarea {
       width: 100%;
       height: 3em;
-      padding: 0.6em;
+      padding: 0.5em;
       resize: none;
+      overflow: hidden;
     }
     .message-actions {
       display: none;
@@ -463,6 +464,7 @@ body {
     &.sending {
       textarea {
         height: 6em;
+        overflow: auto;
       }
       .message-actions {
         display: block;
